lines work with the svg solution. Keep the canvas solution in mind. If this would cause issues, we'll switch, but it would be too much work to be a top priority and we have no time so it will stay for now. And it's not bad either, rly. =)

--- a/src/styles/editor/SynthEditor.css
+++ b/src/styles/editor/SynthEditor.css
@@ -46,3 +46,7 @@
     top: 0;
     left: 0;
 }
+
+.connection-lines > .placed-line{
+    pointer-events: auto;
+}
